2008-05-10  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrenderer.c (gimp_view_renderer_real_draw):
	reset the translation on the cairo context. Resurrects brush
	emblems which were drawn in the wrong position.

	* app/widgets/gimpviewrendererbrush.c (gimp_view_renderer_brush_draw):
	formatting.

2008-05-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/gtm.c: renamed...

	* plug-ins/common/html-table.c: ...to this and cleaned it up.

	* plugin-defs.pl: changed accordingly.
	* Makefile.am: regenerated.

2008-05-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/poppler.c: Support poppler 0.8.x.

2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_release): Don't forget updating the
	integer representation when reverting the rectangle after
	cancelling a rubber-banding.

2008-05-10  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_release): Update the tool options
	after a release; the rectangle might change if a rubber-banding is
	cancelled.

2008-05-10  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_events) (gimp_display_shell_canvas_tool_events):
	don't reserve Delete for use by tools. Fixes bug #532116.

	* app/tools/gimpimagemaptool.c
	* app/tools/gimptransformtool.c: don't use Delete (you can still
	use the Backspace key to achieve the same).

2008-05-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/imagemap/Makefile.am: tweak the rules for rebuilding the
	parser files from lex/yacc source so that they are explicit instead
	of potentially being run implicitly because the file dates are off.

2008-05-10  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add SHADOW_TILES log domain.

	* app/plug-in/gimpplugin-cleanup.c (gimp_plug_in_cleanup_item):
	turn commented-out g_printerr() into a GIMP_LOG()

2008-05-10  Michael Natterer  <mitch@gimp.org>
